--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,35 @@ input {
     -ms-transition: box-shadow .5s ease;
     transition: box-shadow .5s ease;
 }
+
+#questionCounter {
+    font-size: 25px;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#currentQuestion {
+    font-weight: bold;
+    color: #ffffff;
+}
+
+#totalQuestions {
+    font-weight: bold;
+    color: #ffffff;
+}
+
+
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+.userForm{
+    width: 70%;
+    display: flexbox;
+}
 .btn {
-    margin-bottom: 10px;
-    width: 75%;
-    height: 40px;
+    margin-top: 20px;
+    width: 73%;
+    height: 50px;
     font-size: 15px;
     text-transform: uppercase;
     letter-spacing: 2.5px;
@@ -51,6 +75,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     color: #000;
     background-color: #fff;
     border: none;
+    border-radius: 4px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
@@ -73,20 +98,34 @@ h2{
     color: #d0d0d0;
 }
 
-.Right{
-    padding: 5px;
-    color: green;
 
+.box{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
 }
-.Wrong{
-    padding: 5px;
+
+#resultMessageRight{
+    color: rgb(43, 246, 43);
+    font-size: 20px;
+    /*text-shadow: 0 0 5px #d8ffd8, 0 0 10px #7ffe7f, 0 0 15px #15fa15;*/
+}
+
+#resultMessageWrong{
     color: red;
+    font-size: 20px; 
+    /*text-shadow: 0 0 5px #fad6d6, 0 0 10px #ff9393, 0 0 15px #fd1717;*/
 }
 
 #quizContainer {
-    width: 90%;
+    width: 100%;
+    height: 100%;
     max-width: 400px;
-    padding: 20px;
+    padding: 15px;
+    text-align: center;
     
 }
 #questionText {
