--- a/styles.css
+++ b/styles.css
@@ -1,180 +1,133 @@
 /* Общие стили */
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-body { 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+:root {
+    --primary-color: #ffffff;
+    --secondary-color: #000000;
+    --accent-color: #2EE59D;
+    --box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    --transition: all 0.3s ease;
+}
+
+body {
     overflow: hidden;
     margin: 0;
     padding: 0;
-    color: #ffffff;
+    color: var(--primary-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     justify-content: center;
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
-    background: #092756;
-    background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
-    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
-    background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
-    background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
-    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
-}
-input { 
-    width: 70%; 
-    margin-bottom: 10px; 
-    background: rgba(0,0,0,0.3);
-    border: none;
-    outline: none;
-    padding: 10px;
-    font-size: 13px;
-    color: #fff;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-    border: 1px solid rgba(0,0,0,0.3);
-    border-radius: 4px;
-    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
-    -webkit-transition: box-shadow .5s ease;
-    -moz-transition: box-shadow .5s ease;
-    -o-transition: box-shadow .5s ease;
-    -ms-transition: box-shadow .5s ease;
-    transition: box-shadow .5s ease;
+    background: radial-gradient(ellipse at 0% 100%, rgba(104, 128, 138, 0.4) 10%, rgba(138, 114, 76, 0) 40%),
+                linear-gradient(to bottom, rgba(57, 173, 219, 0.25) 0%, rgba(42, 60, 87, 0.4) 100%),
+                linear-gradient(135deg, #670d10 0%, #092756 100%);
 }
 
-#questionCounter {
-    font-size: 25px;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 15px;
-}
-
-#currentQuestion {
-    font-weight: bold;
-    color: #ffffff;
-}
-
-#totalQuestions {
-    font-weight: bold;
-    color: #ffffff;
-}
-
-
-input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
-
-.userForm{
-    width: 70%;
-    display: flexbox;
-}
+input,
+.answer-button,
 .btn {
-    margin-top: 20px;
-    width: 73%;
-    height: 50px;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
+    width: 70%;
+    margin-bottom: 10px;
+    min-height: 60px;
+    height: fit-content;
+    background: rgba(0, 0, 0, 0.3);
     border: none;
-    border-radius: 4px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
     outline: none;
+    padding: 5px;
+    font-size: 13px;
+    color: var(--primary-color);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
+    transition: box-shadow var(--transition);
 }
-  
+
+input:focus,
+.answer-button:hover,
 .btn:hover {
-    background-color: #2EE59D;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-4px);
-}
-h1 {
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-h2{
-    color: #d0d0d0;
-}
-
-
-.box{
-    height: 50px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    align-content: center;
-}
-
-.DiscriptionBox{
-    font-size: 12px;
-    color: white;
-
-}
-
-#resultMessageRight{
-    color: rgb(43, 246, 43);
-    font-size: 20px;
-    /*text-shadow: 0 0 5px #d8ffd8, 0 0 10px #7ffe7f, 0 0 15px #15fa15;*/
-}
-
-#resultMessageWrong{
-    color: red;
-    font-size: 20px; 
-    /*text-shadow: 0 0 5px #fad6d6, 0 0 10px #ff9393, 0 0 15px #fd1717;*/
+    box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
 }
 
 #quizContainer {
     width: 100%;
-    height: 100%;
     max-width: 400px;
     padding: 15px;
     text-align: center;
-    
 }
 
-#questionText {
-    font-size: 18px;
+#questionCounter{
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+
+
+h1,
+h2 {
+    font-size: 24px;
+    text-align: center;
     margin-bottom: 20px;
+    color: var(--primary-color);
+}
+
+h2 {
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.box {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
-.answer-button {
-    margin-bottom: 10px;
-    width: 75%;
+
+#resultMessageRight,
+#resultMessageWrong {
+    font-size: 20px;
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#resultMessageRight {
+    color: rgb(43, 246, 43);
+}
+
+#resultMessageWrong {
+    color: red;
+}
+
+.answer-button,
+.btn {
     height: 40px;
     font-size: 15px;
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+    box-shadow: var(--box-shadow);
     cursor: pointer;
-    outline: none;
+    transition: var(--transition);
 }
-.answer-button:hover {
-    background-color: #2EE59D;
+
+.answer-button:hover,
+.btn:hover {
+    background-color: var(--accent-color);
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
+    color: var(--primary-color);
     transform: translateY(-2px);
 }
+
 .selected {
     background-color: #a4e6cc;
     box-shadow: 0px 15px 20px rgba(5, 219, 133, 0.4);
-    color: #fff;
+    color: var(--primary-color);
     transform: translateY(-2px);
-}
-#resultMessage {
-    font-size: 16px;
-    margin-top: 20px;
-    text-align: center;
-}
-#finalScore {
-    text-align: center;
 }
 
 /* Адаптация под мобильные устройства */
@@ -182,47 +135,41 @@ h2{
     h1 {
         font-size: 20px;
     }
-    .answer-button {
+
+    input,
+    .answer-button,
+    .btn {
         font-size: 14px;
         padding: 12px;
     }
+
     #quizContainer {
-        padding: 15px; /* Уменьшаем отступы внутри контейнера */
+        padding: 15px;
     }
+
     #questionText {
-        font-size: 16px; /* Уменьшаем размер текста вопроса */
-    }
-    input {
-        font-size: 12px; /* Уменьшаем размер шрифта в инпутах */
-        padding: 8px; /* Уменьшаем внутренние отступы */
-    }
-    .btn {
-        font-size: 14px; /* Уменьшаем размер шрифта кнопки */
-        height: 35px; /* Уменьшаем высоту кнопки */
+        font-size: 16px;
     }
 }
 
-/* Дополнительная адаптация для очень маленьких экранов */
 @media (max-width: 400px) {
     h1 {
         font-size: 18px;
     }
+
     #quizContainer {
-        padding: 10px; /* Еще больше уменьшаем отступы */
+        padding: 10px;
     }
+
     #questionText {
-        font-size: 14px; /* Еще больше уменьшаем размер текста вопроса */
+        font-size: 14px;
     }
-    input {
-        font-size: 11px; /* Уменьшаем размер шрифта в инпутах */
-        padding: 6px; /* Уменьшаем внутренние отступы */
-    }
+
+    input,
+    .answer-button,
     .btn {
-        font-size: 13px; /* Уменьшаем размер шрифта кнопки */
-        height: 30px; /* Уменьшаем высоту кнопки */
-    }
-    .answer-button {
-        font-size: 12px; /* Уменьшаем размер шрифта кнопок ответов */
-        padding: 10px; /* Уменьшаем внутренние отступы */
+        font-size: 12px;
+        padding: 10px;
+        height: 30px;
     }
 }
