--- a/styles.css
+++ b/styles.css
@@ -12,83 +12,18 @@ body {
     justify-content: center;
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
-    animation: theme 21s linear infinite;
-
-    &:after,
-    &:before {
-        content: '';
-        display: block;
-        position: fixed;
-        z-index: -1;
-        top: 0;
-        width: 100vw;  
-        height: 100vh;
-        width: 100vmax;
-        height: 100vmax;
-        background: rgba(0,0,0,0.05);
-        animation: background 90s linear infinite;
-    }
-
-    &:after {
-        left: 15vw;
-    }
-
-    &:before {
-        right: 15vw;
-        animation-delay: -30s;
-        animation-direction: reverse;
-    }
-}
-
-@keyframes theme {
-    0% {
-        background: #74C390;
-    }
-
-    16% {
-        background: #5DBDB6;
-    }
-
-    33% {
-        background: #59D4E1;
-    }
-
-    50% {
-        background: #51BCE8;
-    }
-
-    66% {
-        background: #FA5374;
-    }
-
-    83% {
-        background: #E46653;
-    }
-
-    100% {
-        background: #74C390;
-    }
-}
-
-@keyframes background {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
+    background: #092756;
+    background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+    background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+    background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
 }
 
 
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Edge, Opera and Firefox */
+              user-select: none; 
   }
 
 .icon{
@@ -108,12 +43,33 @@ input {
     text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     border: 1px solid rgba(0,0,0,0.3);
     border-radius: 4px;
-    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(239, 237, 237, 0.2);
     -webkit-transition: box-shadow .5s ease;
     -moz-transition: box-shadow .5s ease;
     -o-transition: box-shadow .5s ease;
     -ms-transition: box-shadow .5s ease;
     transition: box-shadow .5s ease;
+}
+
+.scoreBlock {
+    display: flex; /* Размещаем элементы в одну строку */
+    align-items: center; /* Выравниваем элементы по центру вертикально */
+    position: absolute; /* Позиционируем блок в правом верхнем углу */
+    top: 10px; /* Отступ сверху */
+    right: 25px; /* Отступ справа */
+}
+
+/* Стили для изображения */
+#coinImage {
+    width: 30px; 
+    height: 30px;
+    margin-right: 5px; /* Добавляем отступ между изображением и текстом */
+}
+
+/* Стили для счетчика */
+#score {
+    font-size: 16px; /* Размер шрифта */
+    font-weight: bold; /* Жирный шрифт */
 }
 
 #questionCounter {
@@ -186,13 +142,20 @@ h2{
 }
 
 #resultMessageRight{
-    color: rgb(10, 216, 10);
-    font-size: 20px;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+    
+
 }
 
 #resultMessageWrong{
-    color: rgb(250, 24, 24);
-    font-size: 20px;    
+    overflow: hidden;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 20px;
+        
 }
 
 #quizContainer {
@@ -218,6 +181,7 @@ h2{
     color: #000;
     background-color: #fff;
     border: none;
+    border-radius: 4px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
